simple card for pending tmate

--- a/app/views/users/_button_teammate.html.erb
+++ b/app/views/users/_button_teammate.html.erb
@@ -1,5 +1,5 @@
 <% if current_user == nil || !current_user.teammates.include?(user) || current_user == user %>
-  <%= link_to pending_teammate_link(user), method: :post do %>
+  <%= link_to pending_teammate_path(user), method: :post do %>
     <div class="button-teammate d-flex flex-row justify-content-center align-items-center fist">
       <i class="fas fa-fist-raised mr-2"></i>
       <p>T-Mate!</p>
