--- a/app/views/users/pending_teammates.html.erb
+++ b/app/views/users/pending_teammates.html.erb
@@ -1,3 +1,3 @@
 <% @pending_tmates.each do |tmate| %>
-<%= render "users/card_user", user:tmate %>
+<%= render "users/card_user_tmate", user:tmate %>
 <% end %>
