bugs searchbar fixed

--- a/app/views/events/_navbar_all_but_index.html.erb
+++ b/app/views/events/_navbar_all_but_index.html.erb
@@ -5,7 +5,7 @@
     <%= link_to image_tag("icons/back_arrow.svg"), events_path %>
   <% end %>
   <div class="navbar-form-all-but-index">
-    <%= form_tag events_path, method: :get do %>
+    <%= form_tag users_path, method: :get do %>
       <%= text_field_tag :query,
         params[:query],
         class: "form-control",
