--- a/app/views/events/_navbar_index.html.erb
+++ b/app/views/events/_navbar_index.html.erb
@@ -9,7 +9,7 @@
     </a>
   <% end %>
   <div class="navbar-form-index">
-    <%= form_tag events_path, method: :get do %>
+    <%= form_tag users_path, method: :get do %>
       <%= text_field_tag :query,
         params[:query],
         class: "form-control",
