--- a/app/views/events/_navbar_index.html.erb
+++ b/app/views/events/_navbar_index.html.erb
@@ -23,6 +23,7 @@
       <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
         <%= link_to 'Date', events_path(dropdown: 'date') %>
         <%= link_to 'Distance', events_path(dropdown: 'distance') %>
+        <%= link_to 'Teammate', events_path(dropdown: 'teammate') %>
       </div>
     </div>
 </div>
