added the filter of categories of sport

--- a/app/views/events/_navbar_index.html.erb
+++ b/app/views/events/_navbar_index.html.erb
@@ -24,6 +24,13 @@
         <%= link_to 'Date', events_path(dropdown: 'date') %>
         <%= link_to 'Distance', events_path(dropdown: 'distance') %>
         <%= link_to 'Teammate', events_path(dropdown: 'teammate') %>
+        <div class="dropdown-divider"></div>
+        <%= link_to 'Biking', events_path(dropdown: 'biking') %>
+        <%= link_to 'Bowling', events_path(dropdown: 'bowling') %>
+        <%= link_to 'Football', events_path(dropdown: 'football') %>
+        <%= link_to 'Running', events_path(dropdown: 'running') %>
+        <%= link_to 'Volleyball', events_path(dropdown: 'volleyball') %>
+        <%= link_to 'Swimming', events_path(dropdown: 'swimming') %>
       </div>
     </div>
 </div>
