added first letter of user's last name in user's cards

--- a/app/views/users/_card_user.html.erb
+++ b/app/views/users/_card_user.html.erb
@@ -3,7 +3,7 @@
     <div class="d-flex flex-row justify-content-start align-items-center">
       <%= cl_image_tag user.photo.key, height: 400, width: 400, crop: :crop, gravity: :face, class:"avatar-card-user" %>
       <div class="m-0 ml-3 d-flex flex-column justify-content-between align-items-start" >
-        <h3><%= "#{user.first_name}" %></h3>
+        <h3><%= user.firstname_lastname_firstletter %></h3>
         <p><%= user.common_teammates(current_user) %><p>
       </div>
     </div>
