--- a/app/assets/stylesheets/components/_card_user_tmate.scss
+++ b/app/assets/stylesheets/components/_card_user_tmate.scss
@@ -1,16 +1,20 @@
 .card-user-tmate {
   width: 95%;
   height: 130px;
-  i {
-    font-size: 30px;
+  margin: 10px;
+  border-radius: 5px;
+  background-color: white;
+  box-shadow: 0 0 8px rgba(0,0,0,0.08);
+  .btn-pending {
+    color: white;
+    padding: 7px 7px;
+    border-radius: 5px;
+    margin-left: 10px
   }
   .accepted {
-    color:green;
+    background-color: $primary-color;
   } 
   .refused {
-    color: orange
-  }
-  .blocked {
-    color: red;
+    background-color: grey;
   }
 }
