--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -42,16 +42,33 @@
 
 #dropdownMenu2 {
   width: 85px;
+  background-color: #F85A3E;
+  border: none;
+  color: black;
 }
 
 .dropdown-menu {
-  background-color: red;
+  background-color: #F85A3E;
   min-width: 5px;
   width: 90px;
   font-size: 14px;
   text-align: left;
+  padding: 5px;
+}
+
+.btn-secondary:hover {
+  border-color: none;
+  box-shadow: none;
+}
+
+.btn-secondary:not(:disabled):not(.disabled):active:focus, .btn-secondary.active:not(:disabled):not(.disabled):focus, .show > .btn-secondary.dropdown-toggle:focus {
+    box-shadow: none;
 }
 
 .dropdown-item {
   padding-left: 8px;
+}
+
+.link {
+  color: white !important;
 }
