--- a/app/views/events/_navbar_index.html.erb
+++ b/app/views/events/_navbar_index.html.erb
@@ -18,19 +18,19 @@
   </div>
     <div class="dropdown">
       <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Filters
+          <%= image_tag("icons/filter.svg") %>
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-        <%= link_to 'Date', events_path(dropdown: 'date') %>
-        <%= link_to 'Distance', events_path(dropdown: 'distance') %>
-        <%= link_to 'Teammate', events_path(dropdown: 'teammate') %>
+        <%= link_to 'Date', events_path(dropdown: 'date'), class: "link" %>
+        <%= link_to 'Distance', events_path(dropdown: 'distance'), class: "link"  %>
+        <%= link_to 'Teammate', events_path(dropdown: 'teammate'), class: "link"  %>
         <div class="dropdown-divider"></div>
-        <%= link_to 'Biking', events_path(dropdown: 'biking') %>
-        <%= link_to 'Bowling', events_path(dropdown: 'bowling') %>
-        <%= link_to 'Football', events_path(dropdown: 'football') %>
-        <%= link_to 'Running', events_path(dropdown: 'running') %>
-        <%= link_to 'Volleyball', events_path(dropdown: 'volleyball') %>
-        <%= link_to 'Swimming', events_path(dropdown: 'swimming') %>
+        <%= link_to 'Biking', events_path(dropdown: 'biking'), class: "link"  %>
+        <%= link_to 'Bowling', events_path(dropdown: 'bowling'), class: "link"  %>
+        <%= link_to 'Football', events_path(dropdown: 'football'), class: "link"  %>
+        <%= link_to 'Running', events_path(dropdown: 'running'), class: "link"  %>
+        <%= link_to 'Volleyball', events_path(dropdown: 'volleyball'), class: "link"  %>
+        <%= link_to 'Swimming', events_path(dropdown: 'swimming'), class: "link"  %>
       </div>
     </div>
 </div>
