--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
   <div class="d-flex flex-row justify-content-between align-items-center mb-3 p-3">
     <%= cl_image_tag @user.photo.key, height: 400, width: 400, crop: :crop, gravity: :face, class:"avatar-profile" %>
     <%= link_to  teammates_user_path(@user), class: "text-reset" do %>
-      <div class="d-flex flex-column align-items-center justify-content-center"><p class="font-weight-bold mb-0 profile-number"><%= @user.teammates.count %></p><p class="mb-0">T-Mates</p></div>
+      <div class="d-flex flex-column align-items-center justify-content-center"><p class="font-weight-bold mb-0 profile-number"><%= @user.accepted_teammates.count %></p><p class="mb-0">T-Mates</p></div>
     <% end %>
     <%= link_to events_attended_user_path(@user), class:"text-reset" do %>
       <div class="d-flex flex-column align-items-center justify-content-center"><p class="font-weight-bold mb-0 profile-number"><%= @user.events.count %></p><p class="mb-0">Attended</p></div>
