--- a/app/assets/stylesheets/components/_card_user.scss
+++ b/app/assets/stylesheets/components/_card_user.scss
@@ -10,6 +10,7 @@
     font-weight: bold;
     font-size: 18px;
     margin: 0;
+    color: black;
   }
   p {
     margin: 0;
@@ -26,4 +27,8 @@
   width: 80px;
   height: 80px;
   border-radius: 50%;
+}
+
+.common-tmates p {
+  color: #848383;
 }
