--- a/app/views/users/_card_user.html.erb
+++ b/app/views/users/_card_user.html.erb
@@ -2,7 +2,7 @@
   <a href="<%= user_path(user) %>"> 
     <div class="d-flex flex-row justify-content-start align-items-center">
       <%= cl_image_tag user.photo.key, height: 400, width: 400, crop: :crop, gravity: :face, class:"avatar-card-user" %>
-      <div class="m-0 ml-3 d-flex flex-column justify-content-between align-items-start" >
+      <div class="m-0 ml-3 d-flex flex-column justify-content-between align-items-start common-tmates" >
         <h3><%= user.firstname_lastname_firstletter %></h3>
         <p><%= user.common_teammates(current_user) %><p>
       </div>
