did dropdownlist for the filters

--- a/app/views/events/_navbar_index.html.erb
+++ b/app/views/events/_navbar_index.html.erb
@@ -17,7 +17,7 @@
       <% end %>
   </div>
     <div class="dropdown">
-      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <button class="btn btn-secondary" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <%= image_tag("icons/filter.svg") %>
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
