--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -33,7 +33,8 @@
 }
 
 .navbar-form-index {
-  width: 200px;
+  width: 240px;
+  margin-left: -22px;
 }
 
 .navbar-form-all-but-index {
@@ -41,10 +42,11 @@
 }
 
 #dropdownMenu2 {
-  width: 85px;
+  width: 30px;
   background-color: #F85A3E;
   border: none;
   color: black;
+  margin-left: -45px;
 }
 
 .dropdown-menu {
@@ -54,6 +56,7 @@
   font-size: 14px;
   text-align: left;
   padding: 5px;
+  transform: translate3d(-75px, 47px, 0px);
 }
 
 .btn-secondary:hover {
