--- a/app/views/events/_navbar_all_but_index.html.erb
+++ b/app/views/events/_navbar_all_but_index.html.erb
@@ -2,7 +2,7 @@
   <% if current_user.nil? %>
   <%= image_tag "icons/back_arrow.svg", class:"navbar-avatar" %>
   <% else %>
-    <%= link_to image_tag("icons/back_arrow.svg"), events_path %>
+    <%= link_to image_tag("icons/back_arrow.svg"), :back %>
   <% end %>
   <div class="navbar-form-all-but-index">
     <%= form_tag users_path, method: :get do %>
