--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <div class="d-flex flex-row justify-content-between align-items-center mb-3 p-3">
+  <div class="d-flex flex-row justify-content-between align-items-center mb-3 p-3 flex-wrap">
     <%= cl_image_tag @user.photo.key, height: 400, width: 400, crop: :crop, gravity: :face, class:"avatar-profile" %>
     <%= link_to  teammates_user_path(@user), class: "text-reset" do %>
       <div class="d-flex flex-column align-items-center justify-content-center"><p class="font-weight-bold mb-0 profile-number"><%= @user.accepted_teammates.count %></p><p class="mb-0">T-Mates</p></div>
@@ -9,7 +9,12 @@
     <% end %>
     <%= link_to events_created_user_path(@user), class:"text-reset" do %>
       <div class="d-flex flex-column align-items-center justify-content-center"><p class="font-weight-bold mb-0 profile-number"><%= @user.created_events.count %></p><p class="mb-0">Created</p></div>
-    <% end %>   
+    <% end %>
+    <% if !@pending_teammates_count.nil? && !@pending_teammates_count.zero? %>
+      <%= link_to pending_teammates_path, class:"text-reset" do %>
+        <div class="d-flex flex-column align-items-center justify-content-center"><p class="font-weight-bold mb-0 profile-number"><%= @pending_teammates_count %></p><p class="mb-0">Pending Teammates</p></div>
+      <% end %>
+    <% end %>
   </div>
 
   <div class="d-flex flex-row justify-content-around align-items-center mb-3">
