--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -59,3 +59,6 @@
     </div>
   <% end %>
 </div>
+<% if current_user.nil? || current_user != @user %>
+  <%= javascript_pack_tag 'change_button_card_user'%>
+<% end %>
