flash message working but poorly displayed

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -10,4 +10,5 @@
 @import "button_submit_choice";
 @import "form";
 @import "icons_category";
-@import "card_user_tmate"
+@import "card_user_tmate";
+@import "flash";
