positioned flash message on top of navbar

--- a/app/assets/stylesheets/components/_flash.scss
+++ b/app/assets/stylesheets/components/_flash.scss
@@ -1,4 +1,7 @@
-#flash-message {
-  width: 100%;
-  height: 100px;
+.flash-custom {
+  position: absolute;
+  top: 0px;
+  height: 65px;
+  width: 375px;
+  right: 0px;
 }
