--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -36,7 +36,7 @@
           <%= render "reviews/rating", rating: @rating %>
         <% end %>
       </div>
-    <% @past_events.each do |event| %>
+    <% @past_events.reverse.each do |event| %>
       <div>
           <div class="mb-1">
             <a href="<%= event_path(event) %>" class="text-reset">
