added icone, changed it, changed link, added condition on index if empty

--- a/app/views/events/_footer.html.erb
+++ b/app/views/events/_footer.html.erb
@@ -2,6 +2,6 @@
   <div class="footer footer-size">
     <%= link_to image_tag("icons/home.svg"), events_path %>
     <%= link_to image_tag("icons/plus.svg"), new_event_path %>
-    <%= link_to image_tag("icons/map.svg"), root_path %>
+    <%= link_to image_tag("icons/user-plus-solid.svg"), pending_teammates_path %>
   </div>
 </footer>
