added bottom button navbar count

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -23,5 +23,17 @@
   width: 100%;
 }
 
+.teammate_request {
+  display: flex
+}
+
+.teammate_nb {
+  font-size: 25px;
+  color: black;
+  font-style: bold;
+  margin-top: -6px;
+  margin-left: -5px;
+}
+
 
 
