--- a/app/views/events/_footer.html.erb
+++ b/app/views/events/_footer.html.erb
@@ -2,6 +2,9 @@
   <div class="footer footer-size">
     <%= link_to image_tag("icons/home.svg"), events_path %>
     <%= link_to image_tag("icons/plus.svg"), new_event_path %>
-    <%= link_to image_tag("icons/user-plus-solid.svg"), pending_teammates_path %>
+    <div class="teammate_request">
+      <%= link_to image_tag("icons/user-solid.svg"), pending_teammates_path %>
+      <p class="teammate_nb"><%= TeammateLink.where(teammate: current_user, status: "pending").map(&:user).count%> </p>
+    </div>
   </div>
 </footer>
