--- a/app/views/events/_footer.html.erb
+++ b/app/views/events/_footer.html.erb
@@ -3,7 +3,7 @@
     <%= link_to image_tag("icons/home.svg"), events_path %>
     <%= link_to image_tag("icons/plus.svg"), new_event_path %>
     <div class="teammate_request">
-      <%= link_to image_tag("icons/user-solid.svg"), pending_teammates_path %>
+      <%= link_to image_tag("icons/user-solid.svg"), pending_teammates_path, class: "img_user" %>
       <p class="teammate_nb"><%= TeammateLink.where(teammate: current_user, status: "pending").map(&:user).count%> </p>
     </div>
   </div>
