--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,14 @@
 
+
+<% if flash[:success] %>
+  <div class="alert alert-success alert-dismissible fade show flash-custom">
+    <%= flash[:success] %>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+<% end %>
+
 <div class="p-2 d-flex flex-column">
   <div class="d-flex flex-row event-show-header ml-2">
     <a href="<%= user_path(@event.creator) %>">
