--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,5 +17,6 @@
     <%= yield %>
     <div class="footer-size"></div>
     <%= render 'events/footer' %>
+    <%= javascript_pack_tag "remove_alert_timer" %>
   </body>
 </html>
