--- a/app/views/layouts/layout_index.html.erb
+++ b/app/views/layouts/layout_index.html.erb
@@ -16,7 +16,8 @@
     <%= render 'events/navbar_index' %>
 
     <%= yield %>
-    <div class="footer-size">
+    <div class="footer-size"></div>
     <%= render 'events/footer' %>
+    <%= javascript_pack_tag "remove_alert_timer" %>
   </body>
 </html>
