--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,14 @@
 
   <body>
     <%= render 'events/navbar_all_but_index' %>
+    <% if flash[:success] %>
+      <div class="alert alert-success alert-dismissible fade show flash-custom">
+      <%= flash[:success] %>
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+      </div>
+    <% end %>
     <%= yield %>
     <div class="footer-size"></div>
     <%= render 'events/footer' %>
