modified flash to all kind and to use a partial

--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -13,15 +13,8 @@
   </head>
 
   <body>
-    <% if flash[:success] %>
-      <div class="alert alert-success alert-dismissible fade show flash-custom">
-      <%= flash[:success] %>
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-      </div>
-    <% end %>
+    <%= render "layouts/flash" %>
     <%= yield %>
-  <%= javascript_pack_tag "remove_alert_timer" %>
+    <%= javascript_pack_tag "remove_alert_timer" %>
   </body>
 </html>
