--- a/app/views/layouts/layout_index.html.erb
+++ b/app/views/layouts/layout_index.html.erb
@@ -14,14 +14,7 @@
 
   <body>
     <%= render 'events/navbar_index' %>
-    <% if flash[:success] %>
-      <div class="alert alert-success alert-dismissible fade show flash-custom">
-      <%= flash[:success] %>
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-      </div>
-    <% end %>
+    <%= render "layouts/flash" %>
     <%= yield %>
     <div class="footer-size"></div>
     <%= render 'events/footer' %>
