--- a/app/views/layouts/layout_index.html.erb
+++ b/app/views/layouts/layout_index.html.erb
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <%= render 'events/navbar_index' %>
+    <%= render 'events/navbar' %>
     <%= render "layouts/flash" %>
     <%= yield %>
     <div class="footer-size"></div>
