--- a/app/assets/stylesheets/components/_event_card.scss
+++ b/app/assets/stylesheets/components/_event_card.scss
@@ -101,10 +101,12 @@
 
   #clock {
     margin-right: 10px;
+    margin-bottom: 1px;
   }
 
   #calendar {
     margin-right: 10px;
+    margin-bottom: 1px;
   }
 }
 
@@ -120,3 +122,11 @@
     margin-right: 4px;
   }
 }
+
+  #event-creator img {
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+    margin-bottom: 4px;
+  }
