--- a/app/views/events/_card_event.html.erb
+++ b/app/views/events/_card_event.html.erb
@@ -11,7 +11,11 @@
           <% end %>
         </div>
 
-        <div id="event-creator"><%= event.creator.first_name %> <%= event.creator.last_name %></div>
+        <div id="event-creator">
+          <%= event.creator.first_name %>
+          <%= event.creator.last_name %>
+          <%= cl_image_tag event.creator.photo.key, height: 400, width: 400, crop: :crop, gravity: :face %>
+        </div>
 
           <div class="card-elements">
             <div>
