--- a/app/views/events/_navbar_index.html.erb
+++ b/app/views/events/_navbar_index.html.erb
@@ -5,7 +5,7 @@
     </a>
   <% else %>
     <a href="<%= logged_user_path %>">
-      <%= cl_image_tag current_user.photo.key, height: 400, width: 400, crop: :crop, gravity: :face, id: "navbar-avatar" %>
+      <%= cl_image_tag current_user.photo.key, crop: :crop, gravity: :face, id: "navbar-avatar" %>
     </a>
   <% end %>
   <div class="navbar-form-index">
