--- a/app/assets/stylesheets/components/_event_card.scss
+++ b/app/assets/stylesheets/components/_event_card.scss
@@ -101,12 +101,12 @@
 
   #clock {
     margin-right: 10px;
-    margin-bottom: 1px;
+    margin-bottom: 2px;
   }
 
   #calendar {
     margin-right: 10px;
-    margin-bottom: 1px;
+    margin-bottom: 2px;
   }
 }
 
@@ -124,8 +124,9 @@
 }
 
   #event-creator img {
-    width: 18px;
-    height: 18px;
+    margin-right: 6px;
+    width: 22px;
+    height: 22px;
     border-radius: 50%;
     box-shadow: 0 1px 2px rgba(0,0,0,0.2);
     margin-bottom: 4px;
