design of filters button

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -4,4 +4,5 @@
 @import "show_user";
 @import "new_event";
 @import "login";
-@import "pending_teammates"
+@import "pending_teammates";
+@import "index_events";
