--- a/app/assets/stylesheets/pages/_index_events.scss
+++ b/app/assets/stylesheets/pages/_index_events.scss
@@ -9,8 +9,8 @@
     flex-direction: column;
     margin-left: 20px;
     img {
-      width: 25px;
-      height: 25px;
+      width: 35px;
+      height: 35px;
       padding: 5px;
       margin-bottom: 0;
     }
@@ -31,8 +31,8 @@
   .form-category {
     display: flex;
     flex-wrap: wrap;
-    width: 120px;
-    font-size: 20px;
+    width: 150px;
+    font-size: 23px;
     
     input {
       position:absolute;
@@ -60,9 +60,6 @@
     border-style: none;
   }
 }
-.search span {
-  background-color: $primary-color;
-  padding: 3px;
-  border-radius: 5px;
-  text-align: center;
+.hidden {
+  display: none;
 }
