--- a/app/assets/stylesheets/pages/_show_event.scss
+++ b/app/assets/stylesheets/pages/_show_event.scss
@@ -5,11 +5,21 @@
   margin-right: 15px;
 }
 
+.category_logo {
+  font-size: 20px;
+}
+
+.event_info {
+  width: 300px;
+}
+
+
 .event-show-header {
   width: 350px;
   margin: 0;
+  text-align: space-between;
   p {
-    font-size: 13px;
+    font-size: 15px;
   }
   h3 {
     margin-top: 10px;
@@ -33,8 +43,12 @@
 
 #date-and-time {
   width: 250px;
-  font-size:12px;
   color: #3a3838;
+}
+
+h1  {
+  font-size: 30px;
+  font-weight: bold;
 }
 
 h3 {
