--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,21 +1,25 @@
 <div class="p-2 d-flex flex-column">
   <div class="d-flex flex-row event-show-header ml-2">
+    <div class="d-flex flex-column event_info">
+      <h1 style="width: 300px;"> <%= "#{@event.title}" %></h1>
+
+      <div class="d-flex flex-row" id="date-and-time">
+        <p><i class="fas fa-calendar-alt"></i> <%= @event.start_time.strftime("%e %B, %Y") %></p>
+        <p><i class="far fa-clock ml-3"></i> <%= "#{@event.start_time.strftime("%k:%m")} to #{@event.end_time.strftime("%k:%m")}"%></p>
+      </div>
+    </div>
+  </div>
+
+  <div class="d-flex flex-row event-show-header ml-2">
     <a href="<%= user_path(@event.creator) %>">
     <%= cl_image_tag @event.creator.photo.key, height: 400, width: 400, crop: :crop, gravity: :face, class:"avatar-creator" %>
     </a>
     <div class="d-flex flex-column">
       <h1 class="namelast_name"><%= "#{@event.creator.first_name} #{@event.creator.last_name}" %></h1>
-
-      <div class="d-flex flex-row" id="date-and-time">
-        <p><i class="fas fa-calendar-alt"></i> <%= @event.start_time.strftime("%e %B, %Y") %></p>
-        <p><i class="far fa-clock ml-2"></i> <%= "#{@event.start_time.strftime("%k:%m")} to #{@event.end_time.strftime("%k:%m")}"%></p>
-      </div>
     </div>
   </div>
 
-  <h3 class="mt-3" style="margin-left: 5px;"><%= @event.title %></h3>
-
- <div class="d-flex flex-row align-items mt-n1" id="weather-fc">
+ <div class="d-flex flex-row align-items mt-1" id="weather-fc">
     <!-- let this space blank -->
  </div>
 
