finished front-end of show_event according to thibault feedback

--- a/app/assets/stylesheets/pages/_show_event.scss
+++ b/app/assets/stylesheets/pages/_show_event.scss
@@ -30,9 +30,8 @@
   }
 }
 
-.namelast_name {
-  font-size: 20px;
-  font-weight: bold;
+.namelast_name p {
+  font-size: 17px;
 }
 
 .avatar-teammate {
