added search bar to users index

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -12,4 +12,5 @@
 @import "icons_category";
 @import "card_user_tmate";
 @import "flash";
-@import "avatar_list"
+@import "avatar_list";
+@import "searchbar"
