modification of the color of the navbar

--- a/app/views/events/_card_event.html.erb
+++ b/app/views/events/_card_event.html.erb
@@ -1,7 +1,7 @@
   <div class="card-container">
     <div class="card-global">
       <div class="div-icon text-align-center align-middle d-flex align-items-center justify-content-center">
-        <i class="fas <%= event.category.logo_link %>"></i>
+        <i class="fas <%= event.category.logo_link %>" style="font-size: 40px; opacity: 0.9;"></i>
       </div>
       <div class="card-info">
         <div id="event-title">
