--- a/app/views/events/_navbar.html.erb
+++ b/app/views/events/_navbar.html.erb
@@ -1,10 +1,14 @@
-<div class="navbar">
+<div class="navbar d-flex justify-content-between">
   <% if current_user.nil? %>
-  <%= image_tag "icons/back_arrow.svg", class:"navbar-avatar" %>
+    <a href="<%= new_user_session_path %>">
+      <%= image_tag "avatar/default.png", class:"navbar-avatar" %>
+    </a>
   <% else %>
-    <%= link_to image_tag("icons/back_arrow.svg"), 'javascript:history.go(-1);' %>
+    <a href="<%= logged_user_path %>">
+      <%= cl_image_tag current_user.photo.key, crop: :crop, gravity: :face, id: "navbar-avatar" %>
+    </a>
   <% end %>
-  <h1>OpenLake</h1>
+  <h1>Open≈Lake</h1>
   <%= link_to destroy_user_session_path, method: :delete do %>
     <i class="fas fa-sign-out-alt"></i>
   <% end %>
