--- a/app/views/events/_navbar.html.erb
+++ b/app/views/events/_navbar.html.erb
@@ -8,7 +8,7 @@
       <%= cl_image_tag current_user.photo.key, crop: :crop, gravity: :face, id: "navbar-avatar" %>
     </a>
   <% end %>
-  <h1>Open≈Lake</h1>
+  <h1 style="color: #f7f4f4; letter-spacing: 3px;">Open ≈ Lake</h1>
   <%= link_to destroy_user_session_path, method: :delete do %>
     <i class="fas fa-sign-out-alt"></i>
   <% end %>
