changed button filter

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -35,7 +35,7 @@
 
 .teammate_nb {
   font-size: 25px;
-  color: black;
+  color: #030301;
   font-style: bold;
   margin-top: -6px;
   margin-left: -5px;
