--- a/app/assets/stylesheets/pages/_index_events.scss
+++ b/app/assets/stylesheets/pages/_index_events.scss
@@ -62,6 +62,7 @@
     text-align: center;
     margin-right: 10px;
     color: #70757A;
+    font-weight: bold;
     border-style: none;
     box-shadow: 0 0 5px rgba(0,0,0,0.2);
     background-color: white;
