fixed a few frontend issues

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -28,7 +28,7 @@
 
 #btn-login{
   padding: 10px 40px;
-  color: $primary-color;
+  color: black;
   text-align: center;
   background: rgba(255, 255, 255, 1);
   opacity: 1;
