--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -13,7 +13,7 @@
 
 #btn{
   padding: 5px 20px;
-  color: $primary-color;
+  color: black;
   text-align: center;
   background: rgba(255, 255, 255, 1);
   opacity: 1;
