changed color to red and green

--- a/app/assets/stylesheets/components/_card_user_tmate.scss
+++ b/app/assets/stylesheets/components/_card_user_tmate.scss
@@ -6,15 +6,15 @@
   background-color: white;
   box-shadow: 0 0 8px rgba(0,0,0,0.08);
   .btn-pending {
-    color: white;
-    padding: 7px 7px;
+    color: black;
+    padding: 10px 10px;
     border-radius: 5px;
     margin-left: 10px
   }
   .accepted {
-    background-color: $primary-color;
+    background-color: #25e632;
   } 
   .refused {
-    background-color: grey;
+    background-color: red;
   }
 }
