--- a/app/views/users/_card_user_tmate.html.erb
+++ b/app/views/users/_card_user_tmate.html.erb
@@ -5,8 +5,8 @@
   <div class="d-flex flex-column justify-content-center align-items-start">
     <p><strong><%= "#{user.first_name} #{user.last_name}" %></strong> want to be your teammate</h3>
     <div class="d-flex justify-content-around">
-      <%= link_to "accept", accepted_teammate_path(user), method: :post, remote: true, class: "btn-pending accepted" %>
-      <%= link_to "refuse", destroy_teammate_path(user), method: :delete, remote: true, class: "btn-pending refused" %>
+      <%= link_to "Accept", accepted_teammate_path(user), method: :post, remote: true, class: "btn-pending accepted" %>
+      <%= link_to "Refuse", destroy_teammate_path(user), method: :delete, remote: true, class: "btn-pending refused" %>
     </div>
   </div>
 </div>
