--- a/app/views/users/pending_teammates.html.erb
+++ b/app/views/users/pending_teammates.html.erb
@@ -1,5 +1,5 @@
 <% if @pending_tmates.count.zero? %>
-  <h4 class="empty-message">You have no pending teammate invitation</h4>
+  <h4 class="empty-message">You have no pending T-Mate invitation</h4>
 <% else %>
   <% @pending_tmates.each do |tmate| %>
     <%= render "users/card_user_tmate", user:tmate %>
