changed login page

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -11,10 +11,11 @@
   display: flex;
   justify-content: center;
   margin-left: 100px;
-  padding-top: 65px;
+  padding-top: 90px;
+  letter-spacing: 5px;
+  font-size: 28px;
+  border-radius: 5px;
   color: white;
-  animation-duration: 5s;
-  animation-name: slidein;
 }
 
 .buttons-home{
