--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="bg-img">
   <div class="title">
-    <h1>OpenLake</h1>
+    <h1>Open ≈ Lake</h1>
   </div>
   <div class="buttons-home">
     <%= link_to "Log in", user_session_path, id: "btn-login" %>
