--- a/app/views/users/_card_user_tmate.html.erb
+++ b/app/views/users/_card_user_tmate.html.erb
@@ -3,7 +3,7 @@
     <%= cl_image_tag user.photo.key, height: 400, width: 400, crop: :crop, gravity: :face, class:"avatar-card-user" %>
   <% end %>
   <div class="d-flex flex-column justify-content-center align-items-start">
-    <p><strong><%= "#{user.first_name} #{user.last_name}" %></strong> want to be your teammate</h3>
+    <p><strong><%= "#{user.first_name} #{user.last_name}" %></strong> wants to be your teammate</h3>
     <div class="d-flex justify-content-around">
       <%= link_to "Accept", accepted_teammate_path(user), method: :post, remote: true, class: "btn-pending accepted" %>
       <%= link_to "Refuse", destroy_teammate_path(user), method: :delete, remote: true, class: "btn-pending refused" %>
