changed syntax issues in seed and changed color of accept T-Mate button

--- a/app/assets/stylesheets/components/_card_user_tmate.scss
+++ b/app/assets/stylesheets/components/_card_user_tmate.scss
@@ -12,13 +12,15 @@
     margin-left: 10px
   }
   .accepted {
-    background-color: #73ed6a;
+    background-color: #00b268;
     font-size: 17px;
     padding: 6px 20px;
+    margin-top: 5px;
   }
   .refused {
     background-color: #fc4141;
     font-size: 17px;
     padding: 6px 23px;
+    margin-top: 5px;
   }
 }
